# MagGraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PRD.md  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: openapi.yaml
examples/: README.md  python_agent.py
examples/basic/: maggraph.toml
examples/basic/knowledge_graph/: getting_started.md  welcome.md
examples/lakehouse/: maggraph.toml
examples/lakehouse/knowledge_graph/: customer_churn_q2.md
examples/sync/: README.md
examples/sync/follower/: maggraph.toml
examples/sync/leader/: maggraph.toml
maggraph/: Cargo.toml
maggraph-cli/: Cargo.toml
maggraph-cli/src/: main.rs
maggraph-cli/src/cmd/: init.rs  mod.rs  query.rs  recall.rs  scaffold.rs  search.rs  sync.rs  ui.rs
maggraph-cli/tests/: e2e_integration.rs  query_integration.rs  scaffold_integration.rs  ui_crud_integration.rs  ui_integration.rs
maggraph-cli/tests/fixtures/: query_welcome_depth1.md  query_welcome_depth1_dfs.md
maggraph/benches/: traversal.rs
maggraph/src/: error.rs  graph.rs  index.rs  lib.rs  memory.rs  query.rs  recall.rs  security.rs  wikilink.rs
maggraph/src/agent/: mod.rs
maggraph/src/config/: mod.rs  schema.rs
maggraph/src/lakehouse/: cache.rs  content.rs  mod.rs  resolver.rs  uri.rs
maggraph/src/node/: frontmatter.rs  mod.rs
maggraph/src/python/: mod.rs
maggraph/src/sync/: engine.rs  lock.rs  mod.rs  policy.rs  repo.rs
maggraph/src/ui/: api.rs  mod.rs
maggraph/src/ui/assets/: app.js  index.html  style.css
planning/: ARCHITECTURE.md  BACKLOG.md  BENCHMARKS.md  CLI.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LAKEHOUSE.md  MCP.md  PROGRESS.md  PYPI_RELEASE.md  PYTHON.md  README.md  SECURITY.md  SYNC.md  TESTING.md  UI.md  WIKILINKS.md
python/: README.md  pyproject.toml
python/maggraph/: __init__.py  __init__.pyi
python/tests/: test_maggraph.py  test_mcp_scaffold.py
scripts/: smoke_install.sh  smoke_python.py
