[workspace]
members = ["maggraph", "maggraph-cli"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexMercedCoder/MagGraph"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
walkdir = "2.5"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1.11", features = ["v4"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde_json = "1.0"
pyo3 = "0.27"
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
ureq = { version = "2.12", default-features = false, features = ["json"] }
