[package]
name = "maggraph-cli"
description = "CLI for MagGraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "maggraph"
path = "src/main.rs"

[dependencies]
maggraph = { path = "../maggraph", features = ["ui"] }
tokio = { workspace = true }
clap.workspace = true
clap_complete = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
