[package]
name = "maggraph"
description = "In-process Git-backed graph database for AI semantic layers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
git2.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.14"
