[package]
name = "maggraph"
description = "In-process Git-backed graph database for AI semantic layers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "maggraph"

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:tokio"]
python-ext = ["python", "pyo3/extension-module"]

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
git2.workspace = true
chrono.workspace = true
uuid.workspace = true
pyo3 = { version = "0.23", optional = true }
pyo3-async-runtimes = { version = "0.23", optional = true, features = ["tokio-runtime"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.14"
