[package]
name = "maggraph"
description = "In-process Git-backed graph database for AI semantic layers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "maggraph"

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:tokio"]
python-ext = ["python", "pyo3/extension-module"]
ui = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:serde_json",
]

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
git2.workspace = true
chrono.workspace = true
uuid.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }

[[bench]]
name = "traversal"
path = "benches/traversal.rs"
harness = false
