[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "maggraph"
version = "0.1.0"
description = "Python bindings for the MagGraph Rust graph engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.maturin]
manifest-path = "../maggraph/Cargo.toml"
features = ["python-ext"]
module-name = "maggraph._maggraph"
python-source = "."
bindings = "pyo3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
